# TestProject

./: AnimationRefactorV2.cpp  AnimationsRefactor.cpp  CMakeLists.txt  Camera.cpp  Camera.h  CubeV.cpp  CubeV.h  Font.cpp  Font.h  Light.cpp  Light.h  README.md  Shader.cpp  Shader.h  Shadow.h  Window.cpp  Window.h  capture.sh  compile.sh  main.cpp
